# credit-score-ml

./: README.md
credit-score-ml/: Makefile  README.md  pyproject.toml
credit-score-ml/credit_score_ml/: __init__.py  dataset.py  features.py  plots.py
credit-score-ml/credit_score_ml/modeling/: predict.py  train.py
credit-score-ml/docs/: mkdocs.yml
credit-score-ml/docs/docs/: index.md
credit-score-ml/notebooks/: main.ipynb
main/: main.ipynb
