[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "credit_score_ml"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Adsandro Carvalho" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["credit_score_ml"]
include = ["pyproject.toml", "credit_score_ml/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["credit_score_ml"]
force-sort-within-sections = true

